<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.example.mct_faha.modules.main.MainViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.mct_faha.MainActivity">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:onTextChanged="@{(text, start, befora, count)->viewModel.onTextEdited(text, start, befora, count)}"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:hint="Type for search"
                android:gravity="center"
                android:id="@+id/searchTextView"/>
        <ProgressBar
                android:id="@+id/loading"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                android:layout_height="93dp"
                android:layout_width="50dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/repository_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:indeterminate="true"
                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/itunes_item_layout"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/searchTextView" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</layout>